--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "PORT=3000 react-scripts start",
-    "build": "react-scripts build",
+    "start": "PORT=3000 react-scripts  --max_old_space_size=4096 start",
+    "build": "react-scripts  --max_old_space_size=4096 build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
