--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "edu-term",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "19.8.1",
+    "npm": "9.5.1"
+  },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -24,7 +28,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "PORT=3000 && node --max_old_space_size=2560 node_modules/.bin/react-scripts start",
+    "start": "PORT=3000 && node --max_old_space_size=8192 node_modules/.bin/react-scripts start",
     "build": "node --max_old_space_size=2560 node_modules/.bin/react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
